--- a/src/global.scss
+++ b/src/global.scss
@@ -26,7 +26,7 @@ body, html, #root {
     align-items: center;
     padding: 0 size.$unit;
     height: 3 * size.$unit;
-    background-color: color.$light;
+    background: transparent;
     color: color.$text;
     font-family: font.$text;
     font-size: size.$large-text;
@@ -49,8 +49,8 @@ body, html, #root {
 .ingredient {
     position: relative;
     margin: 2 * size.$gap size.$gap;
-    width: 150px;
-    height: 150px;
+    width: 300px;
+    height: 200px;
 
     // Neumorphism.io
     border-radius: 48px;
