--- a/src/sass/_color.scss
+++ b/src/sass/_color.scss
@@ -5,7 +5,17 @@ $blue: #6196cc;
 
 $highlight: #C8E3D4;
 $primary: #37afa9;
-$light: #323f4b;
-$dark: #1f2933;
+$light: #e0e0e0;
+$dark: #888888;
 
-$text: #ffffff;
+$highlight10: #C8E3D410;
+$primary10: #37afa910;
+$light10: #e0e0e010;
+$dark10: #88888810;
+
+$highlight20: #C8E3D420;
+$primary20: #37afa920;
+$light20: #e0e0e020;
+$dark20: #88888820;
+
+$text: #2a2a2a;
