--- a/src/sass/_size.scss
+++ b/src/sass/_size.scss
@@ -3,4 +3,6 @@ $gap: 32px;
 
 $large-text: 24px;
 
-$radius: 24px;
+$ingredient-width: 300px;
+$ingredient-height: 200px;
+$ingredient-radius: 48px;
