--- a/src/sass/_size.scss
+++ b/src/sass/_size.scss
@@ -1,8 +1,13 @@
 $unit: 16px;
 $gap: 32px;
 
+$small-text: 18px;
+$text: 18px;
 $large-text: 24px;
 
 $ingredient-width: 300px;
 $ingredient-height: 200px;
 $ingredient-radius: 48px;
+
+$cupboard-width: 75%;
+$cupboard-height: 75%;
