--- a/src/sass/_size.scss
+++ b/src/sass/_size.scss
@@ -1,12 +1,13 @@
 $unit: 16px;
 $gap: 32px;
 
-$small-text: 18px;
+$smaller-text: 12px;
+$small-text: 14px;
 $text: 18px;
 $large-text: 24px;
 
-$ingredient-width: 300px;
-$ingredient-height: 200px;
+$ingredient-width: 400px;
+$ingredient-height: 250px;
 $ingredient-radius: 48px;
 
 $cupboard-width: 75%;
