--- a/sass/_size.scss
+++ b/sass/_size.scss
@@ -10,5 +10,5 @@ $ingredient-width: 400px;
 $ingredient-height: 250px;
 $ingredient-radius: 48px;
 
-$cupboard-width: 75%;
-$cupboard-height: 75%;
+$popup-width: 75%;
+$popup-height: 75%;
