--- a/sass/_color.scss
+++ b/sass/_color.scss
@@ -18,5 +18,20 @@ $primary20: #37afa920;
 $light20: #e0e0e020;
 $dark20: #88888820;
 
+$highlight50: #C8E3D450;
+$primary50: #37afa950;
+$light50: #e0e0e050;
+$dark50: #88888850;
+
+$highlighta0: #C8E3D4a0;
+$primarya0: #37afa9a0;
+$lighta0: #e0e0e0a0;
+$darka0: #888888a0;
+
+$highlightd0: #C8E3D4d0;
+$primaryd0: #37afa9d0;
+$lightd0: #e0e0e0d0;
+$darkd0: #888888d0;
+
 $text: #2a2a2a;
 $light-text: #e0e0e0;
