--- a/src/components/preview.scss
+++ b/src/components/preview.scss
@@ -40,7 +40,7 @@
         font-size: size.$large-text;
     }
     &:hover {
-        box-shadow: none;
+        // box-shadow: none;
         .icon-container {
             display: none;
         }
