some more stuff

--- a/sass/_size.scss
+++ b/sass/_size.scss
@@ -8,9 +8,7 @@ $small-text: 14px;
 $text: 18px;
 $large-text: 24px;
 
-$ingredient-width: 400px;
-$ingredient-height: 300px;
-$ingredient-radius: 24px;
+$task-height: 300px;
+$task-width: 400px; 
 
-$popup-width: 100%;
-$popup-height: 100vh;
+$menu-width: 420px;
