--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -9,6 +9,13 @@
     padding: 0;
 }
 
+@mixin available-width {
+    width: 100%;
+    width: -moz-available;          /* WebKit-based browsers will ignore this. */
+    width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+    width: fill-available;
+}
+
 @mixin center-items($x: center, $y: center) {
     display: flex;
     justify-content: #{$x};
