--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -1,4 +1,16 @@
-.layout-container {
+@use 'sass/mixin';
+@use 'sass/size';
+
+.layout-wrapper {
     display: flex;
     flex-flow: row nowrap;
+    height: 100%;
+    .layout-container {
+        @include mixin.full;
+        @include mixin.center-items(center, flex-start);
+        flex-flow: row nowrap;
+    }
+    .empty-container {
+        width: calc( 2 * size.$gap + size.$menu-width);
+    }
 }
