--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -1,9 +1,51 @@
+@use 'sass/color';
+@use 'sass/size';
+@use 'sass/mixin';
+
 .menu-container {
-    background-color: green;
+    position: fixed;
+    top: size.$gap;
+    right: size.$gap;
+    width: size.$menu-width;
+    height: calc(100% - 2 * size.$gap);
+    background-color: color.$light;
+    box-shadow: 1px 10px 20px 0 rgba(0,0,0,0.2);
+    .menu-column-wrapper,
+    .menu-column-wrapper > div {
+        height: 100%;
+    }
+}
+
+.selector {
+    flex: 1;
+    @include mixin.no-scrollbar;
+    z-index: 2;
+    width: size.$menu-width;
+    max-height: calc(100% - 3 * #{size.$gap} - #{size.$task-height});
+    overflow-y: scroll;
+    background-color: color.$blue;
+    .column-container {
+        width: size.$menu-width;
+        padding: 0 !important;
+        margin-right: 0 !important;
+        .tasks-wrapper {
+            flex: 1 1 0;
+        }
+    }
 }
 
 .trash {
-    background-color: purple;
-    width: 200px;
-    height: 100px;
+    flex: 1;
+    z-index: 2;
+    width: size.$menu-width;
+    height: size.$task-height;
+    background-color: color.$red;
+    .column-container {        
+        width: size.$menu-width;
+        padding: 0 !important;
+        margin-right: 0 !important;
+        .tasks-wrapper {
+            flex: 0 0 size.$task-height;
+        }
+    }
 }
