styling, add & delete

--- a/sass/_color.scss
+++ b/sass/_color.scss
@@ -1,11 +1,19 @@
-$green: #7ec699;
-$purple: #cc99cd;
-$red: #e2777a;
-$blue: #6196cc;
+$green: #93c99e;
+$purple: #d8beda;
+$red: #f6a7b2;
+$blue: #b2dff2;
 
-$highlight: #e0e0e0;;
-$light: #ffffff;
-$dark: #0e0e0e;
+$lightest: #dcefea;
+$light: #b4ccca;
+$lightish: #8fa9ac;
+$darkish: #6c888f;
+$dark: #4c6773;
+$darkest: #2f4858;
+
+$fake-column: #e9faf6;
+
+$white: #edfdf9;
+$black: #2a2a2a;
 
 $text: #2a2a2a;
 $light-text: #e0e0e0;
