--- a/src/components/task/task.scss
+++ b/src/components/task/task.scss
@@ -1,10 +1,9 @@
 @use 'sass/size';
 
 .task-wrapper {
-    background-color: red;
     width: size.$task-width;
     height: size.$task-height;
-    border-radius: 20px;
-    margin-bottom: 20px;
+    border-radius: size.$task-radius;
+    margin-bottom: size.$gap;
     overflow: hidden;
 }
