--- a/sass/_size.scss
+++ b/sass/_size.scss
@@ -1,14 +1,16 @@
 $unit: 16px;
 $gap: 32px;
 
-$stroke: 10px;
+$stroke: 32px;
 
 $smaller-text: 12px;
 $small-text: 14px;
 $text: 18px;
 $large-text: 24px;
+$huge-text: 96px;
 
 $task-height: 300px;
 $task-width: 400px; 
+$task-radius: 24px;
 
-$menu-width: 420px;
+$menu-width: 0px;// 25vw;
