--- a/src/components/column/column.scss
+++ b/src/components/column/column.scss
@@ -2,17 +2,62 @@
 @use 'sass/color';
 @use 'sass/mixin';
 
+@mixin icon {
+    color: color.$lightish;
+    &:hover,
+    &:focus {
+        color: color.$dark;
+    }
+}
+
 .column-container {
+    flex: 0 0 size.$task-width;
     @include mixin.center-items(flex-start, center);
     flex-flow: column nowrap;
-    height: 100%;
+    position: relative;
+    min-height: calc(100% - 2 * size.$gap);
     width: size.$task-width;
     padding: 0 size.$gap;
     margin-right: size.$gap;
-    // background-color: color.$highlight;
+    margin-top: size.$gap;
+    background-color: rgba(color.$lightest, 0.25);
+    border-radius: size.$task-radius;
+    .drag-handle {
+        @include icon;
+        line-height: size.$large-text;
+        padding: 0.5 * size.$gap;
+        scale: 3 1;
+    }
+    .delete-column {
+        @include icon;
+        position: absolute;
+        top: 0.5 * size.$gap;
+        right: 0.5 * size.$gap;
+    }
+    &:not(:last-of-type) > .add-column {
+        opacity: 0;
+    }
+    &:last-of-type > .add-column {
+        @include icon;
+        position: absolute;
+        top: 0.5 * size.$gap;
+        right: -1 * size.$gap;
+        transition: opacity 200ms ease-in-out;
+    }
     .tasks-wrapper {
         flex: 1;
         @include mixin.center-items(flex-start);
+        width: 100%;
         flex-flow: column nowrap;
     }
+    // &:not(:first-of-type)[showPseudo="yes"]::before {
+    //     content: '';
+    //     position: absolute;
+    //     top: calc(size.$gap + 0.5 * size.$task-height - 0.5 * size.$stroke);
+    //     right: calc(0.5  * size.$task-width + size.$gap );
+    //     height: size.$stroke;
+    //     width: calc(3 * size.$gap + size.$task-width + 1.5 * size.$stroke);
+    //     border-radius: 0.5 * size.$stroke;
+    //     background-color: color.$dark;
+    // }
 }
