--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -1,5 +1,6 @@
 @use 'sass/mixin';
 @use 'sass/size';
+@use 'sass/color';
 
 .layout-wrapper {
     display: flex;
@@ -8,9 +9,21 @@
     .layout-container {
         @include mixin.full;
         @include mixin.center-items(center, flex-start);
+        flex: 1 1 0;
         flex-flow: row nowrap;
+        padding-left: size.$gap;
+        width: auto;
     }
     .empty-container {
-        width: calc( 2 * size.$gap + size.$menu-width);
+        flex: 0 0  calc(4 * size.$gap + size.$task-width);
+    }
+    &::before {
+        content: '';
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: calc(2.5 * size.$gap - 0.5 * (size.$gap - size.$large-text));
+        min-width: 100%;
+        background-color: color.$light;
     }
 }
