--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -8,11 +8,17 @@
     right: size.$gap;
     width: size.$menu-width;
     height: calc(100% - 2 * size.$gap);
-    background-color: color.$light;
+    min-width: calc(size.$task-width + 2 * size.$gap);
+    background-color: color.$dark;
     box-shadow: 1px 10px 20px 0 rgba(0,0,0,0.2);
-    .menu-column-wrapper,
-    .menu-column-wrapper > div {
+    border-radius: size.$task-radius;
+    z-index: 2;
+    .menu-column-wrapper {
+        @include mixin.center-items;
         height: 100%;
+        & > div {
+            height: 100%;
+        }
     }
 }
 
@@ -20,16 +26,21 @@
     flex: 1;
     @include mixin.no-scrollbar;
     z-index: 2;
-    width: size.$menu-width;
+    width: size.$task-width;
     max-height: calc(100% - 3 * #{size.$gap} - #{size.$task-height});
+    margin-top: size.$gap;
     overflow-y: scroll;
-    background-color: color.$blue;
+    border-radius: size.$task-radius;
     .column-container {
-        width: size.$menu-width;
+        width: 100%;
         padding: 0 !important;
-        margin-right: 0 !important;
+        margin: 0 !important;
+        background-color: rgba(color.$darkest, 0.25);
         .tasks-wrapper {
             flex: 1 1 0;
+            .task-wrapper:last-of-type {
+                margin-bottom: 0 !important;
+            }
         }
     }
 }
@@ -37,15 +48,21 @@
 .trash {
     flex: 1;
     z-index: 2;
-    width: size.$menu-width;
+    width: 100%;
     height: size.$task-height;
-    background-color: color.$red;
-    .column-container {        
-        width: size.$menu-width;
+    .column-container {
+        justify-content: center;
+        width: 100%;
         padding: 0 !important;
         margin-right: 0 !important;
+        background-color: rgba(color.$darkest, 0.25);
         .tasks-wrapper {
             flex: 0 0 size.$task-height;
+        }
+        .icon {
+            position: absolute;
+            color: color.$light-text;
+            font-size: size.$huge-text;
         }
     }
 }
