--- a/src/families/base.scss
+++ b/src/families/base.scss
@@ -8,7 +8,7 @@
     display: flex;
     flex-flow: column nowrap;
     width: 100%;
-    height: 100%;
+    min-height: size.$task-height;
     border-radius: size.$task-radius;
     background: color.$green;
     overflow: hidden;
