--- a/sass/_size.scss
+++ b/sass/_size.scss
@@ -1,16 +1,16 @@
-$unit: 16px;
-$gap: 32px;
+$unit: 1.6rem;
+$gap: 3.2rem;
 
-$stroke: 32px;
+$stroke: 3.2rem;
 
-$smaller-text: 12px;
-$small-text: 14px;
-$text: 18px;
-$large-text: 24px;
-$huge-text: 96px;
+$smaller-text: 1.2rem;
+$small-text: 1.4rem;
+$text: 1.8rem;
+$large-text: 2.4rem;
+$huge-text: 9.6rem;
 
-$task-height: 150px;
-$task-width: 400px; 
-$task-radius: 24px;
+$task-height: 15rem;
+$task-width: 40rem; 
+$task-radius: 2.4rem;
 
-$menu-width: 0px;// 25vw;
+$menu-width: 0rem;// 25vw;
