--- a/src/components/column/column.scss
+++ b/src/components/column/column.scss
@@ -4,6 +4,7 @@
 
 @mixin icon {
     color: color.$lightish;
+    font-size: size.$large-text;
     &:hover,
     &:focus {
         color: color.$dark;
