--- a/src/families/base.scss
+++ b/src/families/base.scss
@@ -19,9 +19,10 @@
     .name {
         @include mixin.center-items;
         flex-flow: row nowrap;
+        font-size: size.$text;
         gap: 0.25 * size.$gap;
-        padding-top: 0.5 * size.$gap;
-        padding-bottom: 0.5em;
+        padding-top: 0.25 * size.$gap;
+        padding-bottom: 0.25 * size.$gap;
         &, * {
             color: color.$light-text;
         }
@@ -35,8 +36,8 @@
         padding-bottom: size.$gap;
         background-color: rgba(color.$light, 0.5);
         pre.code {
-            padding: 0.5em;
-            margin: 0.5em;
+            padding: 0.5rem;
+            margin: 0.5rem;
             background-color: rgba(color.$lightest, 1);
             border-radius: 0.5 * size.$task-radius;
             font-family: font.$code;
@@ -47,15 +48,15 @@
             width: 100%;
             flex-flow: row nowrap;
             justify-content: space-between;
-            margin-bottom: -0.3em;
+            margin-bottom: -0.3rem;
             font-size: size.$small-text;
             span {
                 white-space: nowrap;
             }
             .code {
                 @include mixin.no-wrap;
-                padding-left: 1.5em;
-                line-height: 1.85em;
+                padding-left: 1.5rem;
+                line-height: 1.85rem;
                 font-family: font.$code;
                 font-size: size.$smaller-text;
             }
