--- a/src/global.scss
+++ b/src/global.scss
@@ -20,6 +20,7 @@ body, html, #root {
     width: 100%;
     height: 100%;
     background-color: color.$white;
+    font-size: 62.5%; // 1rem = 10px
 }
 
 a {
