added JSON console output

--- a/src/families/ref-finance/withdraw.scss
+++ b/src/families/ref-finance/withdraw.scss
@@ -1,5 +1,5 @@
 @use 'sass/color';
 
 .ref-withdraw-task {
-    background-color: color.$red;
+    background: linear-gradient(to top, #00c08b, #009289, #006474, #00384e, #001220);
 }
